applications/homepage/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homepage
  labels:
    name: homepage
    app.kubernetes.io/name: homepage
    app.kubernetes.io/part-of: homelab
