applications/homepage/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: homepage
  labels:
    app.kubernetes.io/name: homepage
    app.kubernetes.io/part-of: homelab
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Homepage"
    gethomepage.dev/description: "Dynamically Detected Homepage"
    gethomepage.dev/group: "Dynamic"
    gethomepage.dev/icon: "homepage.png"
spec:
  ingressClassName: cilium
  rules:
    - host: homepage.YOUR_DOMAIN
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  number: 80
